Fixed spacing issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,12 +85,12 @@ a:focus {
 }
 
 #about,
-#section-menu > div,
+/*#section-menu > div,*/
 #section-social,
 #section-reviews > div,
 #contact {
-    padding-top:60px;
-    padding-bottom: 60px;
+    padding-top: 80px;
+    padding-bottom: 80px;
 }
 
 .parallax {
